# django_service_layer

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/reservas/: asgi.py  manage.py  wsgi.py
src/reservas/conf/: settings.py  urls.py
src/reservas/data/: admin.py  apps.py
src/reservas/data/migrations/: 0001_initial.py  0002_rename_available_fare_available_seats.py
src/reservas/data/models/: __init__.py  base.py  booking.py  buyer.py  fare.py  pax.py  users.py
src/reservas/interface/api/: router.py  urls.py
src/reservas/service/: __init__.py  base.py  bookings.py  users.py  views.py
